--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+  "ItemsDb": "mongodb://localhost:27017"
+},
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
