--- a/src/ItemsService/ItemsService.csproj
+++ b/src/ItemsService/ItemsService.csproj
@@ -48,11 +48,7 @@
       <_ContentIncludedByDefault Remove="wwwroot\lib\jquery\dist\jquery.min.js" />
       <_ContentIncludedByDefault Remove="wwwroot\lib\jquery\dist\jquery.min.map" />
       <_ContentIncludedByDefault Remove="wwwroot\lib\jquery\LICENSE.txt" />
-    </ItemGroup>
-
-
-    <ItemGroup>
-      <ProjectReference Include="..\ItemsLib\ItemsLib.csproj" />
+      <_ContentIncludedByDefault Remove="wwwroot\favicon.ico" />
     </ItemGroup>
 
 </Project>
