--- a/src/ItemsService.Infrastructure/ItemsService.Infrastructure.csproj
+++ b/src/ItemsService.Infrastructure/ItemsService.Infrastructure.csproj
@@ -8,4 +8,8 @@
       <PackageReference Include="MongoDB.Driver" Version="2.8.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\ItemsService.Core\ItemsService.Core.csproj" />
+    </ItemGroup>
+
 </Project>
